message toggle works

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,16 @@
 <div *ngIf="messageService.messages.length">
 
     <h2>Messages</h2>
+    
+
+
     <button class="clear"
             (click)="messageService.clear()">clear</button>
-    <div *ngFor='let message of messageService.messages'> {{message}} </div>
-  
+            <button (click)="toggle()">{{buttonName}}</button>
+           <div *ngIf="show">
+            <div *ngFor='let message of messageService.messages'> {{message}} </div>
+        </div>
+            
   </div>
+ 
+  
